--- a/PCA.Rmd
+++ b/PCA.Rmd
@@ -18,7 +18,7 @@ This short paper aims to show the basic ideas of the principal components analys
 We start by generating two dimensional data on which we apply PCA. For convenience we will shape the data as two distinct data clouds and plot it.
 
 
-```{r, fig.align = "center", fig.height = 4, fig.width = 5, tidy.opts = list(width.cutoff = 60)}
+```{r, fig.align = "center", fig.height = 4, fig.width = 5, tidy.opts = list(width.cutoff = 60), tidy = TRUE}
 library(ggplot2)
 
 set.seed(1000)
@@ -51,7 +51,7 @@ A natural step would be to scale (standardize) the data before doing the PCA, bu
 PCA without scaling is usually called covariance PCA, while scaled is called correlation PCA.
 
 
-```{r, fig.align = "center", fig.height = 4, fig.width = 5, tidy.opts = list(width.cutoff = 60)}
+   ```{r, fig.align = "center", fig.height = 4, fig.width = 5, tidy.opts = list(width.cutoff = 60), tidy = TRUE}
 # run the PCA
 pca <- princomp(data[,-1], cor = F)
 
@@ -67,7 +67,7 @@ The standard pca outputs are the standard deviations (`pca$sdev`) and the rotati
 
 The cumulative variance plot can provide us with a quick insight into their distribution.
 
-```{r, fig.align = "center", fig.height = 4, fig.width = 5, tidy.opts = list(width.cutoff = 60)}
+```{r, fig.align = "center", fig.height = 4, fig.width = 5, tidy.opts = list(width.cutoff = 60), tidy = TRUE}
 # plot PC variances
 pca.var <- data.frame(PC = 0:length(pca$sdev), var = c(NA, pca$sdev^2), cumvar = cumsum(c(0, pca$sdev)), cumvar_scaled = cumsum(c(0, pca$sdev)) / sum(c(0, pca$sdev)))
 
@@ -80,7 +80,7 @@ Next we plot the principal components coordinates in the original coordinate sys
 Notice: PCA is a rotation of the original coordinate system into the PC coordinate system and PC points are the representation of original points in the PC coordinate system.
 
 
-```{r, fig.align = "center", fig.height = 4, fig.width = 5}
+```{r, fig.align = "center", fig.height = 4, fig.width = 5, tidy.opts = list(width.cutoff = 60), tidy = TRUE}
 ggplot(data, aes(x = x, y = y, color = group)) + 
    geom_point(size = 2) + geom_abline(intercept = 0, slope =  pca$loadings[2,1] / pca$loadings[1,1]) + 
    geom_point(size = 2) + geom_abline(intercept = 0, slope =  pca$loadings[2,2] / pca$loadings[1,2]) + coord_fixed(xlim = c(-2, 3), ylim = c(-1, 3))
@@ -90,7 +90,7 @@ ggplot(data, aes(x = x, y = y, color = group)) +
 After establishing the PC coordinate system we can rotate our original dataset into the PC coordinate system. The plot shows both coordinate system to better illustrate the PCA rotation.
 
 
-```{r fig.align = "center"}
+```{r fig.align = "center", tidy.opts = list(width.cutoff = 60), tidy = TRUE}
 # rotate original data
 x.pca <- as.matrix(data[,-1]) %*% (pca$loadings[,1])
 y.pca <- as.matrix(data[,-1]) %*% (pca$loadings[,2])
@@ -116,7 +116,7 @@ Dimensionality reduction with PCA comes down to projecting the data onto the fir
 
 In this example we only take the first PC and the plots show the effect in the original and the PC coordinate systems.
 
-```{r fig.align = "center"}
+```{r fig.align = "center", tidy.opts = list(width.cutoff = 60), tidy = TRUE}
 newx <- (pca$loadings[1,1]) * (as.matrix(data[,-1]) %*% (pca$loadings[,1]))
 newy <- (pca$loadings[2,1]) * (as.matrix(data[,-1]) %*% (pca$loadings[,1]))
 
