--- a/PCA.Rmd
+++ b/PCA.Rmd
@@ -25,20 +25,14 @@ set.seed(1000)
 
 n <- 10
 
-x1 <- rnorm(n, 0, 1)
-y1 <- rnorm(n, 0, 1)
+x1 <- rnorm(n, 0, 1); y1 <- rnorm(n, 0, 1)
 
-x2 <- rnorm(n, 2, 1)
-y2 <- rnorm(n, 2, 1)
+x2 <- rnorm(n, 2, 1); y2 <- rnorm(n, 2, 1)
 
-
-x <- c(x1, x2)
-y <- c(y1, y2)
-
+x <- c(x1, x2); y <- c(y1, y2)
 
 # combine two groups of data to a single data source
 data <- cbind.data.frame(group = rep(c("1", "2"), each = n), x = x, y = y)
-
 
 # plot the data
 ggplot(data, aes(x = x, y = y, color = group)) + geom_point(size = 2)
@@ -47,11 +41,10 @@ ggplot(data, aes(x = x, y = y, color = group)) + geom_point(size = 2)
 
 ### PCA
 
-A natural step would be to scale (standardize) the data before doing the PCA, but in this case we will omit that step to show the effects better. Scaling is an important step primarily to get all dimensions on the same scale, otherwise the data that is measured in largest units will dominate and the most variance usually lies there. 
-PCA without scaling is usually called covariance PCA, while scaled is called correlation PCA.
+A natural step would be to scale (standardize) the data before doing the PCA, but in this case we will omit that step to show the PCA effects better. Scaling is an important step primarily to get all dimensions on the same scale, otherwise the data that is measured in largest units will dominate and the most variance usually lies there. PCA without scaling is usually called covariance PCA, while scaled is called correlation PCA.
 
 
-   ```{r, fig.align = "center", fig.height = 4, fig.width = 5, tidy.opts = list(width.cutoff = 70), tidy = TRUE}
+```{r, fig.align = "center", fig.height = 4, fig.width = 5, tidy.opts = list(width.cutoff = 70), tidy = TRUE}
 # run the PCA
 pca <- princomp(data[,-1], cor = F)
 
